head and content gap fix

--- a/WebContent/style.css
+++ b/WebContent/style.css
@@ -19,7 +19,7 @@ body {
 	width:90%;
 	margin-left: auto;
 	margin-right: auto;
-	margin-top: 100px;
+	margin-top: 80px;
 	margin-bottom:20px;
 	box-sizing:border-box;
 	box-shadow:0 0 25px black;
